# xf

./: .gitignore  README.md  main.py  pyproject.toml  startup.py  utils.py
.github/workflows/: publish.yml
commands/: __init__.py  base.py  dbt.py  profiling.py  pytest.py
core/: console.py  isolation.py  magics.py  paths.py  shell_mode.py  startup.py  styling.py
isolation/: base.py
startup/: core.py  startup.py
utils/: startup.py
xf/: main.py
xf/commands/: __init__.py  base.py  dbt.py  profiling.py  pytest.py  sqlmesh.py
xf/core/: console.py  isolation.py  magics.py  startup.py  styling.py
xf/utils/: env.py  paths.py  profiling.py
