[project]
name = "pytest-turbo"
version = "0.1.0"
description = "A faster version of pytest that caches imports"
readme = "README.md"
authors = [{ name = "Justin Leder", email = "justin@turntable.so" }]
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.18.1",
    "pickleshare>=0.7.5",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "tomlkit>=0.13.2",
]

[tool.uv]
managed = true
package = true
dev-dependencies = ["pytest-django>=4.9.0"]

[project.scripts]
pt = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [".*venv"] # Exclude all venv files by default

[tool.hatch.build.targets.wheel]
packages = ["."]
